update flag. fix touch on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -98,6 +98,65 @@ body {
   z-index: 2;
 }
 
+.mobile--waldo-tracker {
+  position: relative;
+}
+
+.mobile--waldo-tracker button {
+  transition: 0.2s;
+  cursor: pointer;
+}
+
+.mobile--waldo-tracker button:hover {
+  scale: 1.1;
+}
+
+.mobile--waldo-tracker button:focus-visible {
+  outline: 3px solid var(--secondary);
+}
+
+.mobile--waldo-tracker .header--target-description {
+  top: 0;
+  right: 100%;
+}
+
+.drop-down-wrapper {
+  display: grid;
+  grid-template-rows: 0fr;
+  transition: 0.2s;
+  position: absolute;
+  right: 0;
+  top: 100%;
+  background-color: #dfbc77b8;
+  border-radius: 0 0 50vw 50vw;
+  width: max-content;
+  z-index: 2;
+}
+
+.drop-down-wrapper.open {
+  grid-template-rows: 1fr;
+}
+
+.drop-down {
+  position: relative;
+  overflow: hidden;
+  width: max-content;
+}
+
+.drop-down:has(.header--target:hover) {
+  overflow: visible;
+}
+
+.drop-down .waldo-tracker {
+  flex-direction: column;
+  margin-inline: auto;
+  padding: 10px 6px;
+}
+
+.mobile--waldo-tracker .header--target .target-img {
+  transform-origin: right;
+}
+
 .header--target .target-img {
   height: calc(var(--header-height) * 0.8);
   transform-origin: top;
@@ -146,6 +205,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .viewer--img-container img {
@@ -192,6 +252,8 @@ body {
   overflow: hidden;
   border-radius: 5%;
   z-index: 1;
+  max-width: 100vw;
+  max-height: 100vw;
 }
 
 .viewer--zoom-window:active {
@@ -253,21 +315,39 @@ body {
 @keyframes plant-flag {
   0% {
     scale: 0;
+    opacity: 1;
+    translate: 0 -50%;
   }
 
-  80% {
+  20% {
+    opacity: 1;
     scale: 1.5;
+    translate: 0 -50%;
+  }
+
+  30% {
+    opacity: 1;
+    scale: 1.5;
+    translate: 0;
+  }
+
+  40% {
+    opacity: 1;
+    scale: 1.5;
+    translate: 0;
   }
 
   100% {
     scale: 1;
+    opacity: 0.7;
   }
 }
 
 .flag img {
-  flex: 0 0 50px;
+  flex: 0 0 20px;
+  max-width: 30px;
   animation-name: plant-flag;
-  animation-duration: 0.5s;
+  animation-duration: 1s;
   animation-fill-mode: both;
 }
 
@@ -455,15 +535,15 @@ body {
   margin-top: 16px;
   font-family: inherit;
   font-weight: 700;
+  font-size: 1.1rem;
   letter-spacing: 0.1em;
-  appearance: none;
-  border: none;
-  padding: 8px;
+  padding-block: 10px;
   align-self: center;
-  border-radius: 8px;
+  border-radius: 50vw;
   background-color: var(--primary);
   color: var(--secondary);
   transition: scale 0.3s;
+  width: min(80%, 200px);
 }
 
 .menu--card .start-game-button:hover {
@@ -1894,6 +1974,17 @@ img {
   text-decoration: underline;
   outline: none;
 }
-.badge-button-wrapper {
-  /* width: 60px; */
+
+.mobile--waldo-tracker {
+  height: var(--header-height);
+}
+
+.mobile--waldo-tracker button {
+  background-color: transparent;
+  height: 100%;
+  padding: 5px;
+}
+
+.mobile--waldo-tracker button img {
+  height: 100%;
 }
